...
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="24dp" />

                    <!-- Broadcast button -->
                    <LinearLayout
                        android:id="@+id/btnBroadcastMessage"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/bg_button_blue"
                        android:clickable="true"
...
